# mlops_project

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-ci.yml
src/mlops_project/: __init__.py
src/mlops_project/core/: __init__.py  logger.py
src/mlops_project/data/: __init__.py  ingest.py  schema.py  transform.py  validate.py
tests/: test_smoke.py
tests/data/: test_transform.py
