[project]
name = "mlops-project"
version = "0.1.0"
description = "Running mlops project"
authors = [
    {name = "Sid"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.5,<0.15.0)",
    "pytest (>=9.0.1,<10.0.0)"
]
